# natquiz

./: LICENSE  README.md  pyproject.toml  questions.toml
src/citizenship_quizzer/: parse_questions.py  prototype.ipynb  questions.toml
src/natquiz/: app.py  parse_questions.py  questions.toml
